# permavite

./: .gitignore  CNAME
backend/permabot/: Cargo.toml
backend/permaserver/: Cargo.toml
backend/permaserver/src/: main.rs
website/: index.html  plug-connect.html  plug-in-create.html
website/auth_pages/: auth.html
website/css/: front.css
website/error_pages/: 404.html
website/js/: activaPage.js  product.js
