[package]
name = "permaserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
rouille = "3.6.2"
redb = "1.5.0"
ureq = { version = "2.9.1", features = ["json"] }
shellexpand = "3.1.0"